--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * My Personal Configuration
 includes the following configurations:
-- checkered_flag: spacemacs
+- :checkered_flag: spacemacs
 - bash
 - ssh
 - other files I have no idea I had
